# strelki

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.rst  pyproject.toml  release-please-config.json  setup.cfg  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: continuous_integration.yml  release.yml
docs/: api-guide.rst  conf.py  getting-started.rst  guide.rst  index.rst
strelki/: __init__.py  api.py  constants.py  factory.py  formatter.py  locales.py  parser.py  strelki.py  util.py
tests/: conftest.py  test_api.py  test_factory.py  test_formatter.py  test_locales.py  test_parser.py  test_strelki.py  test_util.py  utils.py
