[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "strelki"
authors = [{name = "Chris Smith", email = "crsmithdev@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dateutil>=2.7.0",
    "backports.zoneinfo==0.2.1;python_version<'3.9'",
    "tzdata;python_version>='3.9'",
]
requires-python = ">=3.8"
description = "Better dates & times for Python"
keywords = [
    "strelki",
    "date",
    "time",
    "datetime",
    "timestamp",
    "timezone",
    "humanize",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "dateparser==1.*",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytz==2026.1",
    "ruff",
    "simplejson==3.*",
    "ty",
    "types-python-dateutil>=2.8.10",
]
doc = [
    "doc8",
    "sphinx>=7.0.0",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinx_rtd_theme>=1.3.0",
]

[project.urls]
Documentation = "https://strelki.readthedocs.io"
Source = "https://github.com/krisfremen/strelki"
Issues = "https://github.com/krisfremen/strelki/issues"

[tool.flit.module]
name = "strelki"

[tool.pytest.ini_options]
addopts = "-v --cov-branch --cov=strelki --cov-fail-under=99 --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = ["ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
"strelki/__init__.py" = ["F401"]
"tests/*" = ["ANN001", "ANN201"]

[tool.ty.src]
include = ["strelki"]

[tool.ty.environment]
python-version = "3.9"
